# plugin-publish

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  pnpm-lock.yaml
.github/workflows/: ci.yml  publish.yml
crates/idml-export/: Cargo.toml
crates/idml-export/src/: emit.rs  lib.rs  paged.rs  resources.rs  rewrite.rs  tests.rs
crates/idml-import/: Cargo.toml
crates/idml-import/examples/: dump_anchored.rs  dump_markers.rs
crates/idml-import/src/: designmap.rs  graphic.rs  lib.rs  spread.rs  story.rs  styles.rs  util.rs
crates/idml-import/tests/: roundtrip.rs
crates/pdf-import/: Cargo.toml
crates/pdf-import/src/: build.rs  ir.rs  lib.rs  ocf.rs
crates/pdf-import/tests/: build_roundtrip.rs
scripts/: build-wasm.sh
