[package]
name = "idml-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Export re-serialization (save-back). Carry-through writer: copies untouched package entries verbatim and streaming-patches only the attributes the parsed model owns, so a mutated Document round-trips to a valid export package without losing unparsed bytes."

[lints]
workspace = true

[dependencies]
idml-import = { path = "../idml-import" }
paged-scene = { workspace = true }
thiserror = { workspace = true }
# Same wasm-compatible config idml-import reads zips with: default
# features off + deflate only. No native-only deps so the crate
# builds for wasm32 too (the save-back path runs in the editor/SDK).
zip = { workspace = true }
quick-xml = { workspace = true }
# `.paged` manifest.json — parsed + MERGE-rewritten so unknown fields and
# third-party plugin metadata round-trip untouched (pure Rust, wasm-safe).
serde_json = "1"
